# codex

./: .env-example  .gitignore  HERMES_USAGE.md  JETSON_USAGE.md  LOCAL_MODEL_USAGE.md  MISTRAL_SMALL_USAGE.md  PHI4_USAGE.md  README.md  STRUCTURE.md  demo.py  download_model.py  jetson_gpu_check.py  jetson_gpu_optimize.py  jetson_setup.py  pyproject.toml  requirements.txt  reset_chroma.py  setup_env.py  switch_model.py
.github/workflows/: python-package.yml
codex/: __init__.py  main.py
codex/ingestion/: __init__.py  code_parser.py  doc_parser.py
codex/llm/: __init__.py  query_engine.py
codex/storage/: __init__.py  vector_store.py
codex/ui/: __init__.py  cli.py
tests/: __init__.py  test_basic.py
