[tool.poetry]
name = "codex"
version = "0.1.0"
description = "Code Onboarding and Documentation EXpert"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/yourusername/codex"
packages = [{include = "codex"}]

[tool.poetry.dependencies]
python = "^3.9"
langchain = "^0.3.19"
langchain-community = "^0.3.18"
langchain-openai = "^0.3.7"
chromadb = "^0.6.3"
sentence-transformers = "^3.4.1"
huggingface-hub = "^0.29.1"
openai = "^1.65.2"
tiktoken = "^0.9.0"
pypdf = "^5.3.1"
docx2txt = "^0.8"
beautifulsoup4 = "^4.13.3"
click = "^8.1.8"
rich = "^13.9.4"
pydantic = "^2.10.6"
tqdm = "^4.67.1"
gitpython = "^3.1.44"
python-dotenv = "^1.0.1"
llama-cpp-python = "^0.3.7"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
black = "^25.1.0"
isort = "^6.0.1"
mypy = "^1.15.0"
pylint = "^3.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
codex = "codex.main:cli" 